--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -19,18 +17,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/aseete/css/reset.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/aseete/css/style.css"/>
-    <script src="%PUBLIC_URL%/aseete/js/modernizr.js"></script>
-    <link rel="stylesheet" href="%PUBLIC_URL%/aseete/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/aseete/css/fonts.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/aseete/css/style1.css"/>
+    <link rel="stylesheet" href="./aseete/css/reset.css">
+    <link rel="stylesheet" href="./aseete/css/style.css">
+    <script src="./aseete/js/modernizr.js"></script>
+    <link rel="stylesheet" href="./aseete/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./aseete/css/fonts.css">
+    <link rel="stylesheet" href="./aseete/css/style1.css">
 
     <title>React App</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -44,12 +43,12 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script src="%PUBLIC_URL%/aseete//js/bootstrap.bundle.min.js"></script>
+    <script src="../boodoo/aseete//js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="%PUBLIC_URL%/aseete/js/particles.min.js"></script>
-    <script src="%PUBLIC_URL%/aseete/js/app.js"></script>
+    <script src="./aseete/js/particles.min.js"></script>
+    <script src="./aseete/js/app.js"></script>
     <script src="https://unpkg.com/kursor"></script>
     
     <script>
@@ -77,7 +76,7 @@
             color: '#fff',
         })
     </script>
-    <script src="%PUBLIC_URL%/aseete/js/main.js"></script>
+    <script src="./aseete/js/main.js"></script>
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
@@ -114,5 +113,6 @@
         });
     </script>
 
-  </body>
+</body>
+
 </html>
