--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css">
@@ -24,7 +24,7 @@
     <script src="./aseete/js/modernizr.js"></script>
     <link rel="stylesheet" href="./aseete/css/bootstrap.min.css">
     <link rel="stylesheet" href="./aseete/css/fonts.css">
-    <link rel="stylesheet" href="./aseete/css/style1.css">
+    <link rel="stylesheet" href="./aseete/css/style1.css"> -->
 
     <title>React App</title>
 </head>
@@ -43,7 +43,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script src="../boodoo/aseete//js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="../boodoo/aseete//js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
@@ -111,7 +111,7 @@
                 },
             },
         });
-    </script>
+    </script> -->
 
 </body>
 
